Adjust animations and set scrollbar always on to prevent horizontal bounce on settings expansion

--- a/dash-if-reference-player/src/styles.css
+++ b/dash-if-reference-player/src/styles.css
@@ -14,6 +14,7 @@ app-root {
 body {
   background-color: #eff3f6;
   margin: 0;
+  overflow-y: scroll;
   scrollbar-color: #999 transparent;
 }
 
